<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    tools:context=".MainActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            android:background="@color/primaryColor"
            app:titleTextColor="@color/primaryTextColor"
        />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_quickstart"
            style="@style/MainTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/timer_setup"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sets"
                android:gravity="center_horizontal"
                style="@style/MainTextAppearanceSmall"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tv_work"
                style="@style/MainTextAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/work" />

            <TextView
                android:id="@+id/tv_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/rest_layout"
                style="@style/MainTextAppearanceSmall"
                android:layout_marginTop="16dp" />



        </LinearLayout>

        <include layout="@layout/clock_layout"
            android:id="@+id/clock_layout"/>

        <Button
            android:id="@+id/btn_start_timer"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primaryLightColor"
            android:text="@string/start"
            android:textColor="@color/primaryTextColor"
            app:cornerRadius="8dp"
            />

        <Button
            android:id="@+id/btn_save_timer"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/primaryTextColor"
            app:strokeColor = "@color/secondaryColor"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/save" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_saved_timers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/secondaryColor"
            app:srcCompat="@drawable/ic_round_folder_24" />

    </RelativeLayout>



</LinearLayout>