<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    >

    <EditText
        android:id="@+id/et_sets"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:minWidth="100dp"
        android:background="@null"
        android:inputType="number"
        android:text="@string/first_set"
        android:gravity="center_horizontal"
        style="@style/MainTextAppearance"
        android:maxLength="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        style="@style/MainTextAppearance"
        android:text="@string/colon" />

    <EditText
        android:id="@+id/et_work"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:minWidth="100dp"
        android:background="@null"
        android:inputType="number"
        android:text="@string/double_zero"
        android:gravity="center_horizontal"
        style="@style/MainTextAppearance"
        android:maxLength="3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        style="@style/MainTextAppearance"
        android:text="@string/colon" />

    <EditText
        android:id="@+id/et_rest"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:minWidth="100dp"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:background="@null"
        android:inputType="number"
        android:text="@string/double_zero"
        android:gravity="center_horizontal"
        style="@style/MainTextAppearance"
        android:maxLength="3"/>
</LinearLayout>