<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primaryLightColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvSavedTimerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_name"
                style="@style/MainTextAppearance"
                android:textSize="24sp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:id="@+id/tvSavedTimerStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/MainTextAppearanceSmall"
                android:text="@string/saved_timer_numbers"

                />
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnDeleteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/action_delete"
                android:textColor="@color/primaryTextColor"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor = "@color/secondaryColor"
                />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>